--- a/build.xml
+++ b/build.xml
@@ -68,11 +68,11 @@
 	  		<zipfileset dir="${build}" includes="install.rdf"/>
 	  		<zipfileset dir="${build}" includes="chrome.manifest"/>
   		</zip>
+  		<delete dir="${build}"/>
   	</target>
 
   	<target name="clean" description="clean up" >
 	    <!-- Delete the ${build} and ${dist} directory trees -->
     	<delete dir="${build}"/>
-	    <delete dir="${dist}"/>
 	</target>
 </project>
